--- a/index.html
+++ b/index.html
@@ -1,38 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./Develop/style.css" />
+  <link rel="stylesheet" href="./Develop/style2.css">
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <!-- Timeblocks go here -->
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">9 AM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">10 AM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">11 AM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">12 PM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">1 PM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">2 PM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">3 PM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">4 PM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="border-top border-bottom col">
+        <p class="mt-4">5 PM</p>
+      </div>
+      <div class="col-8 border-top border-bottom border-left border-right">
+        <textarea id="list1" class="time-block h-100" type="text" placeholder="Sample Task"></textarea>
+      </div>
+      <div class="col">
+        <button class="saveBtn rounded-right-lg w-100 h-100">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lock"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+          </svg>
+        </button>
+      </div>
     </div>
 
+
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <script src="./js/script.js"></script>
+</body>
+
 </html>
